# financial-dashboard

./: README.md  Untitled  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2e7f9a1c4b22_add_transaction_indexes_and_upload_default.py  5a6e9f4c1d77_add_transaction_dedup_key.py  75c8f1d32685_initial_tables.py  9c1f7d3a4b11_add_upload_job_fields.py  b81e2cd9a743_add_chat_persistence_tables.py  cf7b3a9d1122_add_upload_progress_fields.py
backend/app/: config.py  db.py  main.py
backend/app/models/: __init__.py  category.py  chat_message.py  chat_profile.py  chat_thread.py  merchant.py  transaction.py  upload.py
backend/app/routers/: __init__.py  categories.py  chat.py  dashboard.py  llm.py  merchants.py  transactions.py  upload.py
backend/app/schemas/: __init__.py  category.py  chat.py  dashboard.py  merchant.py  transaction.py  upload.py
backend/app/seed/: categories.py
backend/app/services/: categorizer.py  chat.py  chat_store.py  embeddings.py  parser.py  upload_service.py
backend/finance_dashboard.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_categorizer.py  test_parser.py  test_transactions_api.py  test_upload_api.py
frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css
frontend/src/components/chat/: ChatDrawer.tsx  ChatTable.tsx  MarkdownLite.tsx
frontend/src/lib/: api.ts  format.ts
frontend/src/pages/: DashboardPage.tsx  TransactionsPage.tsx
frontend/src/types/: api.ts
(+13 files in other folders)
